Fri Jun 16 20:53:26 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	  - Update transparency when the desktop background changes. (#344609)

Fri Jun 16 20:32:50 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/common/outbound.c:
	* src/common/outbound.h:
	* src/common/servlist.c:
	* src/common/util.c:
	* src/common/proto-irc.c:
	* src/common/cfgfiles.c:
	* src/common/text.c:
	* src/common/text.h:
	* src/common/dcc.c:
	* src/common/network.c:
	* src/common/dcc.h:
	* src/common/network.h:
	* src/common/plugin.c:
	* src/common/server.c:
	* src/common/xchat.c:
	* src/common/notify.c:
	* src/common/CVS/Entries:
	* src/common/server.h:
	* src/common/xchat.h:
	* src/common/notify.h:
	* src/common/ignore.c:
	* src/common/ctcp.c:
	  - Update from xchat CVS.

Fri Jun 16 18:57:53 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Don't show the context menu if we don't have a valid row
	    reference. (#340191)

Fri Jun 16 18:47:28 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* help/C/xchat-gnome.xml:
	  - Update the description and title of the user manual to better
	    match documentation standards. (#344482)

Fri Jun 16 00:09:00 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/apps_xchat.schemas.in:
	  - Add a gconf key to disable the "don't print consecutive
	    redundant nickstamps" feature.

Thu Jun 15 11:10:34 MDT  Dan Kuester <dkuester@colorado.edu>

	* src/fe-gnome/conversation-panel.c:
	  - Remove cracky conversation replace code; put the same prettiness
	    in as text events later.

Wed Jun 14 18:37:48 MDT  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/palette.c:
	  - Remove some dead code and tweak the yellow color to be a little
	    less sickening.

Wed Jun 14 17:48:29 MDT  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/palette.c:
	* src/fe-gnome/palette.h: